--- a/labs/lab06.ipynb
+++ b/labs/lab06.ipynb
@@ -415,7 +415,7 @@
    ],
    "source": [
     "df_temps['Number of Observations (n/a)'] = pd.to_numeric(df_temps['Number of Observations (n/a)'], downcast='unsigned')\n",
-    "df_temps.iloc[:,2:13] = df_temps.iloc[:,2:13].apply(pd.to_numeric,downcast=\"float\") #= pd.to_numeric(df_temps.iloc[:,2:13], downcast=\"float\")\n",
+    "df_temps.iloc[:,2:13] = df_temps.iloc[:,2:13].apply(pd.to_numeric,downcast=\"float\")\n",
     "\n",
     "df_temps.info()\n",
     "\n",
