--- a/project/Modeling.ipynb
+++ b/project/Modeling.ipynb
@@ -18,13 +18,13 @@
    "source": [
     "## Summary\n",
     "\n",
-    "We tried a plethora of classfiers, and as text classfication was one of the topics we didn't go over class, it gave us a chance to stuggle with the whole process and overcome it. A large challange that we faced during our process was the gridsearch for the CNN, where we ported everything over to our communal PC, which has more processing power than our laptops. This was an issue because of the implementation of the packages and issues with `n_jobs`/multiprocessing. We looked through a few reaseach papers to even try to solve the issue with the data in the first place and find a way to adjust how the counting/vecotrizing of the text itself could increase performance. \n",
+    "We tried a plethora of classifiers, and as text classification was one of the topics we didn't go over class, it gave us a chance to struggle with the whole process and overcome it. A large challenge that we faced during our process was the gridsearch for the CNN, where we ported everything over to our communal PC, which has more processing power than our laptops. This was an issue because of the implementation of the packages and issues with `n_jobs`/multiprocessing. We looked through a few research papers to even try to solve the issue with the data in the first place and find a way to adjust how the counting/vectorizing of the text itself could increase performance.\n",
     "\n",
-    "Our choice to use nltk and the power of nlp did increase the performace without much side effects, so we continued to use that model for all of the classification. Every tweet is cleaned and also lemmantized. We learned the use of the Pipeline which is a great tool in sklearn, we used an ensemble method just to have some variety, we changed our initial `MultinomialNB` to `ComplementNB` after reading a reasearch paper, and we upgraded tensorflow to have access to newer methods such as the powerful `TextVectorization` for the CNN.\n",
+    "Our choice to use nltk, and the power of nlp did increase the performace without much side effects, so we continued to use that model for all the classification. Every tweet is cleaned and also lemmantized. We learned the use of the Pipeline which is a great tool in sklearn, we used an ensemble method just to have some variety, we changed our initial `MultinomialNB` to `ComplementNB` after reading a research paper, and we upgraded tensorflow to have access to newer methods such as the powerful `TextVectorization` for the CNN.\n",
     "\n",
-    "In the end, we found a similar result as the researcher on his paper. It is quite simple for almost all classifiers to see the difference between offensive and unoffensive, but with hatespeech being so complex and unperfect data, we could only get so far. It took a while to realize that you do not need an accuracy or macro-f1 of 95% or above to be successful. What we have achieved, in its rudametory state can already assist humans with the tasks of suveilling the web for hate, albiet it is not strong enough to be operating on its own. We also checked out how it would perform on the simpler dataset, which just combines hatespeech and offensive language.\n",
+    "In the end, we found a similar result as the researcher on his paper. It is quite simple for almost all classifiers to see the difference between offensive and unoffensive, but with hatespeech being so complex and perfect data, we could only get so far. It took a while to realize that you do not need an accuracy or macro-f1 of 95% or above to be successful. What we have achieved, in its rudimentary state can already assist humans with the tasks of surveilling the web for hate, albeit it is not strong enough to be operating on its own. We also checked out how it would perform on the simpler dataset, which just combines hatespeech and offensive language.\n",
     "\n",
-    "After finishing this, we took a look at how the reaserachers did it, our heatmaps look pretty similar except for one area, which is the neither category. We hypothesize that this is from the extra parameters they passed into the classfier on top of the text, e.g. sentiment, vocab, and readablitiy, lengths, @s, link counts, syllables. We think this would help the neither category as `sentiment` is helpful to differentiate the positive meaning phrases.\n"
+    "After finishing this, we took a look at how the researchers did it, our heatmaps look pretty similar except for one area, which is the neither category. We hypothesize that this is from the extra parameters they passed into the classifier on top of the text, e.g. sentiment, vocab, and readability, lengths, @s, link counts, syllables. We think this would help the neither category as `sentiment` is helpful to differentiate the positive meaning phrases.\n"
    ]
   },
   {
@@ -1072,7 +1072,7 @@
    "metadata": {},
    "source": [
     "## CNN GridSearch\n",
-    "This is needed because we used a windows PC for more power. Non-unix machines output functional models as probalbilities, so `predict` needs to be altered to call `argmax`"
+    "This is needed because we used a windows PC for more power. Non-unix machines output functional models as probabilities, so `predict` needs to be altered to call `argmax`"
    ]
   },
   {
@@ -3096,7 +3096,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we use a seperate 50% of the origional data for testing, we see that what is happening here is the sampling is struggling with saving the unique quality of hate speech words and thus making offensive language dominate everything. Even the neither category is losing a lot of important information. This is very misleading and shows that we cannot get any better than this unless we adjust the information that the origional data has, such as semantics, tone, and context."
+    "Once we use a separate 50% of the original data for testing, we see that what is happening here is the sampling is struggling with saving the unique quality of hate speech words and thus making offensive language dominate everything. Even the neither category is losing a lot of important information. This is very misleading and shows that we cannot get any better than this unless we adjust the information that the original data has, such as semantics, tone, and context."
    ]
   },
   {
