--- a/project/Modeling.ipynb
+++ b/project/Modeling.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -724,12 +724,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use gl0ve file to improve word relations (apriori) ~1gb"
+    "### Use gloVe file to improve word relations (apriori) ~1gb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -739,12 +739,21 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 18.6 s, sys: 632 ms, total: 19.3 s\n",
+      "Wall time: 19.8 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "embeddings_index = {}\n",
     "\n",
-    "with open(os.path.join(os.getcwd(), 'glove.twitter.27B.100d.txt'), encoding=\"utf8\") as f:\n",
+    "with open(os.path.join(os.getcwd(), 'data/glove.twitter.27B.100d.txt'), encoding=\"utf8\") as f:\n",
     "    for line in f:\n",
     "        word, coefs = line.split(maxsplit=1)\n",
     "        coefs = np.fromstring(coefs, \"f\", sep=\" \")\n",
